deployment-mock.uat.yml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: api-prepaid-mock
  namespace: prepaid
  labels:
    app: api-prepaid
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-prepaid
      version: v2
  template:
    metadata:
      labels:
        app: api-prepaid
        version: v2
    spec:
      containers:
      - name: api-prepaid
        image: ${IMAGE}
        ports:
        - containerPort: 8080
        imagePullPolicy: Always
        volumeMounts:
        - name: volume
          mountPath: /mock/data
      imagePullSecrets:
        - name: container-reg-credentials
      volumes:
        - name: volume
          persistentVolumeClaim:
            claimName: tcmockfile
---
