destination-rule.staging.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: api-prepaid-dr
  namespace: api-prepaid
spec:
  host: api-prepaid
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
---
