kube.staging.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: prepaid
  labels:
    istio-injection: enabled
---
###########
# Service #
###########
apiVersion: v1
kind: Service
metadata:
  name: api-prepaid
  labels:
    app: api-prepaid
    service: api-prepaid
  namespace: prepaid
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: api-prepaid
---
##############
# Deployment #
##############
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: api-prepaid
  namespace: prepaid
  labels:
    app: api-prepaid
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-prepaid
  template:
    metadata:
      labels:
        app: api-prepaid
    spec:
      containers:
      - name: api-prepaid
        image: ${IMAGE}
        ports:
        - containerPort: 8080
        imagePullPolicy: Always
        volumeMounts:
        - name: volume
          mountPath: /mock/data
      imagePullSecrets:
        - name: container-reg-credentials
      volumes:
        - name: volume
          persistentVolumeClaim:
            claimName: tcmockfile
---
###################
# Virtual Service #
###################
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: api-prepaid-vts
  namespace: prepaid
spec:
  hosts:
  - api.${CLUSTER_ENVIRONMENT}.${CLUSTER_DOMAIN}
  gateways:
  - global-gateway.default.svc.cluster.local
  http:
  - match:
    - uri:
        prefix: /prepaid/1.0
    rewrite:
      uri: /api-prepaid-1.0/1.0
    route:
    - destination:
        host: api-prepaid
        port:
          number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: api-prepaid-se-kafka
  namespace: prepaid
spec:
  hosts:
  - "137.116.88.31"
  location: MESH_EXTERNAL
  ports:
  - number: 9092
    name: tcp-api-prepaid-kafka
    protocol: TCP
  resolution: NONE
---
