kube.uat.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: prepaid
  labels:
    istio-injection: enabled
---
###########
# Service #
###########
apiVersion: v1
kind: Service
metadata:
  name: api-prepaid
  labels:
    app: api-prepaid
    service: api-prepaid
  namespace: prepaid
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: api-prepaid
---
##############
# Deployment #
##############
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: api-prepaid
  namespace: prepaid
  labels:
    app: api-prepaid
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-prepaid
      version: v1
  template:
    metadata:
      labels:
        app: api-prepaid
        version: v1
    spec:
      containers:
      - name: api-prepaid
        image: ${IMAGE}
        ports:
        - containerPort: 8080
        imagePullPolicy: Always
      imagePullSecrets:
        - name: container-reg-credentials
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: api-prepaid-se-tecnocom
  namespace: prepaid
spec:
  hosts:
  - "tc.uat.multicajadigital"
  addresses:
  - "200.111.44.187"
  location: MESH_EXTERNAL
  ports:
  - number: 9080
    name: http-api-prepaid-tecnocom
    protocol: HTTP
  resolution: NONE
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: api-prepaid-user-management
  namespace: prepaid
spec:
  hosts:
  - "users.uat.multicajadigital"
  addresses:
  - "40.70.68.63"
  location: MESH_EXTERNAL
  ports:
  - number: 8080
    name: tcp-api-prepaid-user-management
    protocol: TCP
  resolution: NONE
---
