virtual-serivce.production.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: api-prepaid-vts
  namespace: prepaid
spec:
  hosts:
  - api.private.local
  gateways:
  - global-gateway.default.svc.cluster.local
  http:
  - match:
    - uri:
        prefix: /prepaid/1.0
    rewrite:
      uri: /api-prepaid-1.0/1.0
    route:
    - destination:
        host: api-prepaid
        subset: v1
        port:
          number: 80
---
