virtual-service.staging.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: api-prepaid-vts
  namespace: api-prepaid
spec:
  hosts:
  - api.${CLUSTER_ENVIRONMENT}.${CLUSTER_DOMAIN}
  gateways:
  - global-gateway.default.svc.cluster.local
  http:
  - match:
    - uri:
        prefix: /prepaid/1.0/prepaid/dee63b13-d3cc-44cf-a86b-f6ec37330a11
    rewrite:
      uri: /api-prepaid-1.0/1.0/prepaid/dee63b13-d3cc-44cf-a86b-f6ec37330a11
    route:
      - destination:
          host: api-prepaid
          subset: v2
          port:
            number: 80
  - match:
    - uri:
        prefix: /prepaid/1.0
    rewrite:
      uri: /api-prepaid-1.0/1.0
    route:
    - destination:
        host: api-prepaid
        subset: v1
        port:
          number: 80
---
