virtual-service.uat.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: api-prepaid-vts
  namespace: prepaid
spec:
  hosts:
  - ${INTERNAL_LB}
  - api.${CLUSTER_ENVIRONMENT}.${CLUSTER_DOMAIN}
  gateways:
  - global-gateway.default.svc.cluster.local
  http:
  - match:
    - uri:
        prefix: /prepaid/1.0/prepaid/b63dc04a-d836-472e-9215-830eebea73b0
    rewrite:
      uri: /api-prepaid-1.0/1.0/prepaid/b63dc04a-d836-472e-9215-830eebea73b0
    route:
      - destination:
          host: api-prepaid
          subset: v2
          port:
            number: 80
  - match:
    - uri:
        prefix: /prepaid/1.0
    rewrite:
      uri: /api-prepaid-1.0/1.0
    route:
    - destination:
        host: api-prepaid
        subset: v1
        port:
          number: 80
---
